--- a/projects/templates/projects/list.html
+++ b/projects/templates/projects/list.html
@@ -12,8 +12,8 @@
         <tbody>
             {% for project in lists %}
             <tr>
-                <td>{{ project.name }}</td>
-                <td>0</td>
+                <td><a href="{% url 'show_project' id=project.id %}">{{ project.name }}</a></td>
+                <td>{{ project.tasks.all|length }}</td>
             </tr>
             {% endfor %}
         </tbody>
