--- a/projects/templates/projects/list.html
+++ b/projects/templates/projects/list.html
@@ -3,6 +3,7 @@
 {% block main %}
 <div>
     <h1>My Projects</h1>
+    <p><a href="{% url 'create_project' %}">Create a new project</a></p>
     {% if lists %}
     <table>
         <thead>
