--- a/projects/templates/base.html
+++ b/projects/templates/base.html
@@ -12,6 +12,18 @@
 
 <body>
     <header>
+        <nav>
+            <ul>
+                {% if request.user.is_authenticated %}
+                <li><a href="{% url 'tasks:show_my_tasks' %}">My Tasks</a></li>
+                <li><a href="{% url 'list_projects' %}">My Projects</a></li>
+                <li><a href="{% url 'logout' %}">Logout</a></li>
+                {% else %}
+                <li><a href="{% url 'login' %}">Login</a></li>
+                <li><a href="{% url 'signup' %}">Signup</a></li>
+                {% endif %}
+            </ul>
+        </nav>
     </header>
     <main>
         {% block main %} {% endblock %}
