--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block main %}
-<div>
+<div class="container">
     <h1>Login</h1>
     {% if form.error %}
     <p>{{ message }}</p>
@@ -9,7 +9,7 @@
     <form method="post">
         {% csrf_token %}
         {{form.as_p}}
-        <button>Login</button>
+        <button class="button inverse-button w-button">Login</button>
     </form>
 </div>
 {% endblock %}
