--- a/projects/templates/base.html
+++ b/projects/templates/base.html
@@ -1,4 +1,5 @@
 {% load static %}
+{{ form.media }}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -7,27 +8,58 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tracker</title>
+    <title>Project Tracker</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="{% static '/css/main.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static '/css/style-guide.css' %}">
+
 </head>
 
 <body>
     <header>
-        <nav>
-            <ul>
-                {% if request.user.is_authenticated %}
-                <li><a href="{% url 'tasks:show_my_tasks' %}">My Tasks</a></li>
-                <li><a href="{% url 'list_projects' %}">My Projects</a></li>
-                <li><a href="{% url 'logout' %}">Logout</a></li>
-                {% else %}
-                <li><a href="{% url 'login' %}">Login</a></li>
-                <li><a href="{% url 'signup' %}">Signup</a></li>
-                {% endif %}
-            </ul>
-        </nav>
+        <div>
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <img class="logo" src="{% static 'images/lr-clogo-transparent-bg.png' %}"
+                    style="width:10vw; min-width:100px;">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+                    aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+
+                <ul class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    {% if request.user.is_authenticated %}
+                    <li><a class="nav-item nav-link active" href="{% url 'mytasks:show_my_tasks' %}">My Tasks</a></li>
+                    <li><a class="nav-item nav-link" href="{% url 'list_projects' %}">My Projects</a></li>
+                    <li><a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a></li>
+                    {% else %}
+                    <li><a class="nav-item nav-link" href="{% url 'home_page' %}">Home</a></li>
+                    <li><a class="nav-item nav-link" href="{% url 'login' %}">Login</a></li>
+                    <li><a class="nav-item nav-link" href="{% url 'signup' %}">Signup</a></li>
+                    {% endif %}
+                </ul>
+            </nav>
+        </div>
     </header>
     <main>
         {% block main %} {% endblock %}
+        <div class="footer-section section-padding">
+            <div class="footer-b"></div>
+        </div>
     </main>
 </body>
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+    integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/js/bootstrap.min.js"
+    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+    crossorigin="anonymous"></script>
+<script src="https://d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8.js?site=644b07619881d794f1ce7dec"
+    type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+    crossorigin="anonymous"></script>
+<script src="js/main.js" type="text/javascript"></script>
 
 </html>
