--- a/projects/templates/projects/create.html
+++ b/projects/templates/projects/create.html
@@ -1,15 +1,17 @@
 {% extends "base.html" %}
 
 {% block main %}
-<div>
-    <h1> Create a new project </h1>
-    {% if form.error %}
-    <p>{{ message }}</p>
-    {% endif %}
-    <form method="post">
-        {% csrf_token %}
-        {{form.as_p}}
-        <button>Create</button>
-    </form>
+<div class="section-padding">
+    <div class="container">
+        <h1> Create a new project </h1>
+        {% if form.error %}
+        <p>{{ message }}</p>
+        {% endif %}
+        <form method="post">
+            {% csrf_token %}
+            {{form.as_p}}
+            <button class="button inverse-button w-button">Create</button>
+        </form>
+    </div>
 </div>
 {% endblock %}
