--- a/tasks/templates/tasks/tasks.html
+++ b/tasks/templates/tasks/tasks.html
@@ -1,7 +1,8 @@
 {% extends "base.html" %}
+{% load tz %}
 
 {% block main %}
-<div>
+<div class="container">
     <h1>My Tasks</h1>
     {% if lists %}
     <table>
@@ -10,14 +11,19 @@
             <th>Start date</th>
             <th>Due date</th>
             <th>Is completed</th>
+            <th>Edit</th>
         </thead>
         <tbody>
             {% for task in lists %}
             <tr>
-                <td>{{ task.name }}</td>
+                <td class="tasks">{{ task.name }} </td>
                 <td>{{ task.start_date }}</td>
-                <td>{{ task.due_date }}</td>
-                <td>{{ task.is_completed|yesno }}</td>
+                {% if task.due_date < now %} <td class="danger">
+                    {% else %}
+                    <td>
+                        {% endif %}{{ task.due_date }}</td>
+                    <td>{{ task.is_completed|yesno }}</td>
+                    <td><a class="link-light" href="{% url 'mytasks:edit_tasks' task.id %}"> Edit </a></td>
             </tr>
             {% endfor %}
         </tbody>
