--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -15,12 +15,12 @@
         <div class="container">
             <p><a class="link-light" href="{% url 'home_page' %}">Return to home page</a></p>
             <div class="w-layout-grid style-guide-grid">
-                <div>
+                <div class="style-guide-heading" style="grid-column: span 2">
                     <h1>Style Guide</h1>
                     <p>This page contains the website style guide</p>
                 </div>
                 <div></div>
-                <div class="style-guide-category">
+                <div class="style-guide-category" style="grid-column: span 2;">
                     <div>Typography</div>
                 </div>
                 <div></div>
@@ -80,7 +80,7 @@
                 </div>
                 <div>
                     <div class="style-guide-color-wrap dark-background">
-                        <h4 class="light-text">Dark Color: #010922</h4>
+                        <h4 class="light-text">Dark Background Color: #010922 </h4>
                     </div>
                     <div class="style-guide-color-wrap primary-color-background">
                         <h4 class="light-text">Primary Brand Color: #2d2879</h4>
@@ -91,7 +91,7 @@
                     <div class="style-guide-color-wrap neutral-background">
                         <h4>Neutral Brand Color: #e0c484</h4>
                     </div>
-                    <div class="style-guide-color-wrap light-secondary-background-copy">
+                    <div class="style-guide-color-wrap light-secondary-background">
                         <h4>Secondary Light Color: #8ad1d1</h4>
                     </div>
                     <div class="style-guide-color-wrap light-primary-background">
