--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -19,11 +19,9 @@
                     <h1>Style Guide</h1>
                     <p>This page contains the website style guide</p>
                 </div>
-                <div></div>
-                <div class="style-guide-category" style="grid-column: span 2;">
+                <div class="style-guide-category" style="grid-column: span 2">
                     <div>Typography</div>
                 </div>
-                <div></div>
                 <div class="style-guide-edit-wrap">
                     <p>To edit the font family and color used globally on all type elements edit,
                         select the <span class="style-guide-element">Body</span> element.
@@ -71,10 +69,9 @@
                     <p class="short-p"> Regular and Short wrapped paragraph
                     </p>
                 </div>
-                <div class="style-guide-category">
+                <div class="style-guide-category" style="grid-column: span 2">
                     <div>Color</div>
                 </div>
-                <div></div>
                 <div class="style-guide-edit-wrap">
                     <p>Select the Background color:</p>
                 </div>
@@ -110,10 +107,9 @@
                         <h4>Light Color: #f6f1f1</h4>
                     </div>
                 </div>
-                <div class="style-guide-category">
+                <div class="style-guide-category" style="grid-column: span 2">
                     <div>Buttons</div>
                 </div>
-                <div></div>
                 <div class="style-guide-edit-wrap">
                     <p>See light vs dark mode buttons. For dark mode use <span class="style-guide-class">.inverse-button
                         </span></p>
@@ -141,10 +137,9 @@
                         <a href="#" class="link-dark">Text Link</a>
                     </div>
                 </div>
-                <div class="style-guide-category">
+                <div class="style-guide-category" style="grid-column: span 2">
                     <div>Layout Elements</div>
                 </div>
-                <div></div>
                 <div class="style-guide-edit-wrap">
                     <p>To edit the left-right padding on all sections, select the top section on this page and edit the
                         <span class="style-guide-class">Section-Padding</span> class
@@ -181,10 +176,9 @@
                         <p>Images sizes: 500, 800, 1080px</p>
                     </div>
                 </div>
-                <div class="style-guide-category">
+                <div class="style-guide-category" style="grid-column: span 2">
                     <div>CSS Code Organization</div>
                 </div>
-                <div></div>
                 <div class="style-guide-edit-wrap">
                     <p> <b>Style Guide: </b> Under static folder, file under<span
                             class="style-guide-class tag-class">style-guide.css</span>
